--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/support-news-carousel/support-news-carousel.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/support-news-carousel/support-news-carousel.html
@@ -10,7 +10,7 @@
 				    <div class="news-block">
 			          <h3><a href="${obj.link}">${obj.titleName}</a></h3>
 			          <div class="news-body not-trimmed">${obj.details @ context='html'}</div>
-			          <span class="news-date">${obj.lastModifiedDate}</span>
+			          <div class="news-date-block"><span class="news-date">${obj.lastModifiedDate}</span></div> 
 			        </div>
 			    </sly>
 			</sly>
