--- a/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
@@ -4,7 +4,14 @@
             <h2>Documentation</h2>
             <a class="external-app-link btn btn-primary" [href]="state.widgets.docs" target="_blank" (click)="sendDocumentation('Documentation')">Go to the Documentation Center</a>
         </div>
-        <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
+        <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}
+            <a *ngIf="state.user.loggedIn === 'true'"
+                href="https://www.bmc.com/available/create-modify-pn-subscription-list.html" class="ml-3"
+                adaptPopover="Click here to edit your favorite Products and alert subscription"
+                [triggers]="'mouseover:mouseout'">
+                <span class="d-icon-pencil_adapt"></span>
+            </a>
+        </div>
     </div>
     <div class="extended-widget-body" [ngBusy]="docsService.busyConfig">
         <adapt-accordion>
