--- a/front-end/Assets/src/css/modules/_support_personalized.scss
+++ b/front-end/Assets/src/css/modules/_support_personalized.scss
@@ -12,6 +12,14 @@
 	}
 }
 
+.supportcentral-orientation-loggedin,
+.supportcentral-orientation-nonloggedin,
+.supportcentral-search-personalised .support-section-container,
+.supportcentral-dashboard,
+.support-news-carousel {
+    background: #F9F9FA;
+}
+
 .psc-section-heading {
 	font-weight: 600;
     margin-bottom: 25px;
@@ -101,6 +109,7 @@
 
 	.news-block {
 		position: relative;
+		background: white;
 		min-width: 25%;
 		max-width: 25%;
 		margin-right: 3%;
@@ -109,17 +118,27 @@
 			0 9px 10px rgba(0, 0, 0, 0.06);
 		border-radius: 5px;
 		padding: 10px 20px;
+		display: flex;
+    	flex-direction: column;
 		.news-body {
 			font-size: 12px;
+			flex-grow: 1;
 			&.not-trimmed {
 				display: none;
 			}
 		}
-		.news-date {
-			position: absolute;
-			right: 8px;
-			bottom: 5px;
-			font-size: 12px;
+		.news-date-block {
+			position: relative;
+			height: 18px;
+			border-top: 1px solid #AFB1B3;
+			margin-top: 10px;
+			padding-top: 3px;
+			.news-date {
+				position: absolute;
+				right: 0px;
+				font-size: 12px;
+				color: #AFB1B3;
+			}
 		}
 	}
 
@@ -161,6 +180,7 @@
 	.psc-orientation-checklist {
 		& {
 			flex-direction: column;
+			padding-bottom: 15px;
 		}
 		& > div {
 			justify-content: center;
