--- a/front-end/Assets/src/css/orion/_orion-Secondary-Nav.scss
+++ b/front-end/Assets/src/css/orion/_orion-Secondary-Nav.scss
@@ -54,6 +54,9 @@
             }
             @media (min-width:$break-md) {
                 font-size: 18px;
+                padding: 6px 3px;
+            }
+            @media (min-width:$break-lg) {
                 padding: 6px 9px;
             }
         }
