Defect fix, Icons size change

--- a/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.scss
+++ b/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.scss
@@ -59,3 +59,20 @@
         }
     }
 }
+
+@media (max-width: 600px) {
+    .extended-widget-body {
+        .case {
+            h4 {
+                padding-right: 0px;
+                a {
+                    display: block;
+                }
+                .product-name {
+                    margin-left: 0px;
+                }
+            }
+        }
+    }  
+}
+
