WEB-6793 Added specific CSS for the headerImage & Footer logo dimensions

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -45,7 +45,7 @@
                                         {{#ifCond linkType '===' "play"}}
                                         {{else}}
                                     <span>
-                                        <img src="{{footerLogo}}">
+                                        <img  src="{{footerLogo}}" style="{{#if footerLogo}}max-height:30px;{{/if}}">
                                     </span>
                                     {{/ifCond}}
                                     {{/if}}
