WEB-9670 Updated sly element typo in html for cardCTA.

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -22,19 +22,19 @@
 						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 						<sly data-sly-test.anchorCSS="rc-card-modal-youtube-video-player"/>
 						<sly data-sly-test.cardIcon="play"/>
-						<sly data-slt-test.cardCTA="Play"/>
+						<sly data-sly-test.cardCTA="Play"/>
 					</sly>
 					<sly data-sly-test="${card.contentText == 'Demos'}">
 						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 						<sly data-sly-test.anchorCSS=""/>
 						<sly data-sly-test.cardIcon="play"/>
-						<sly data-slt-test.cardCTA="Start"/>
+						<sly data-sly-test.cardCTA="Start"/>
 					</sly>
 					<sly data-sly-test="${card.contentText != 'Videos' && card.contentText != 'Demos'}">
 						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 						<sly data-sly-test.anchorCSS=""/>
 						<sly data-sly-test.cardIcon="view"/>
-						<sly data-slt-test.cardCTA="View"/>
+						<sly data-sly-test.cardCTA="View"/>
 					</sly>
 
 
