Google analytics change container

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-dashboard/supportcentral-dashboard.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-dashboard/supportcentral-dashboard.html
@@ -31,12 +31,12 @@
 
 <app-root></app-root>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-38WV2ZDKPB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114788512-5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-38WV2ZDKPB', {
+  gtag('config', 'UA-114788512-5', {
 	   'custom_map': {'dimension<1>': 'login status'}}
 	  );
 </script>
