Search link for question mark changed

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-search-personalised/supportcentral-search-personalised.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-search-personalised/supportcentral-search-personalised.html
@@ -11,7 +11,7 @@
 						<div id="searchbox" class="CoveoSearchbox" data-enable-omnibox="true" data-placeholder="Search BMC Support"></div>
 						</div>
   					</fieldset>
-                 <a target="_blank" class="contextual-tooltip" title="Help" href="/support/support-guide-advanced-product-info.html#Search-the-Knowledge-Base">?</a>
+                 <a target="_blank" class="contextual-tooltip" title="Help" href="/support/resources/kbsearchtips.html">?</a>
           </div>
 		  <!-- WEB-7277 Support Coveo Search changes END -->
     </div>
