--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -1,69 +1,71 @@
 <!--/* WEB-9670 Componentization for Resource Section  */-->
 <section class="gutter-width" data-sly-use.productSet="com.bmc.components.ResourceSection">
-	<div class="resource-results">
-		<div class="text-center">
-			<h2 class="h2-variation-1">${properties.rcTitle @ context='html'}</h2>
-			<h3 >${properties.rcSubTitle @ context='html'}</h3>
-		</div>
-		<div class="rc-card-row">
-            <!--/*  Handle layout of cards in Landscape
-			<sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
-			<sly data-sly-test="${properties.numberOfCards == '3'}">
-				<sly data-sly-test.assetClass="sm-col sm-col-6 md-col-4"></sly>
-			</sly>
-			<sly data-sly-test="${properties.numberOfCards == '4'}">
-				<sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
-			</sly> */-->
-			<!--/*  Iterate through the cards for the multifield and fetch page properties  */-->
-			<sly data-sly-list.card="${productSet.resourceSectionCards}">
-				<div class="rc-card-col">
+	<div class="layout-inner-wrap">
+		<div class="resource-results">
+			<div class="text-center">
+				<h2 class="h2-variation-1">${properties.rcTitle @ context='html'}</h2>
+				<h3 >${properties.rcSubTitle @ context='html'}</h3>
+			</div>
+			<div class="rc-card-row p1 py2">
+				<!--/*  Handle layout of cards in Landscape
+                                               <sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
+                                               <sly data-sly-test="${properties.numberOfCards == '3'}">
+                                                              <sly data-sly-test.assetClass="sm-col sm-col-6 md-col-4"></sly>
+                                               </sly>
+                                               <sly data-sly-test="${properties.numberOfCards == '4'}">
+                                                              <sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
+                                               </sly> */-->
+				<!--/*  Iterate through the cards for the multifield and fetch page properties  */-->
+				<sly data-sly-list.card="${productSet.resourceSectionCards}">
+					<div class="rc-card-col" style="padding-bottom:20px">
 
-					<sly data-sly-test="${card.contentText == 'Videos'}">
-						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
-						<sly data-sly-test.anchorCSS="rc-card-modal-youtube-video-player"/>
-						<sly data-sly-test.cardIcon="play"/>
-						<sly data-sly-test.cardCTA="Play"/>
-					</sly>
-					<sly data-sly-test="${card.contentText == 'Demos'}">
-						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
-						<sly data-sly-test.anchorCSS=""/>
-						<sly data-sly-test.cardIcon="play"/>
-						<sly data-sly-test.cardCTA="Start"/>
-					</sly>
-					<sly data-sly-test="${card.contentText != 'Videos' && card.contentText != 'Demos'}">
-						<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
-						<sly data-sly-test.anchorCSS=""/>
-						<sly data-sly-test.cardIcon="view"/>
-						<sly data-sly-test.cardCTA="View"/>
-					</sly>
+						<sly data-sly-test="${card.contentText == 'Videos'}">
+							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
+							<sly data-sly-test.anchorCSS="modal-video-player"/>
+							<sly data-sly-test.cardIcon="play"/>
+							<sly data-sly-test.cardCTA="Play"/>
+						</sly>
+						<sly data-sly-test="${card.contentText == 'Demos'}">
+							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
+							<sly data-sly-test.anchorCSS=""/>
+							<sly data-sly-test.cardIcon="play"/>
+							<sly data-sly-test.cardCTA="Start"/>
+						</sly>
+						<sly data-sly-test="${card.contentText != 'Videos' && card.contentText != 'Demos'}">
+							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
+							<sly data-sly-test.anchorCSS=""/>
+							<sly data-sly-test.cardIcon="view"/>
+							<sly data-sly-test.cardCTA="View"/>
+						</sly>
 
 
-					<a class="${anchorCSS}" href="${resolvedLink}">
-						<div class="simple-card bg-white">
-							<div class="card-header">
-								<h4>${card.contentText}</h4>
-								<div class="card-icon ic_${cardIcon}" alt="" border="0"></div>
+						<a class="${anchorCSS}" href="${resolvedLink}">
+							<div class="simple-card bg-white">
+								<div class="card-header">
+									<h4>${card.contentText}</h4>
+									<div class="card-icon ic_${cardIcon}" alt="" border="0"></div>
+								</div>
+								<div class="card-content">
+									<hr/>
+									<h4>${card.title  @ context='html'}</h4>
+									<p>${card.description  @ context='html'}</p>
+								</div>
+								<div class="card-footer">
+									<span class="card-footer-action">
+										<svg class="align-middle s-${cardIcon}">
+											<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${cardIcon}"></use>
+										</svg>
+										${cardCTA @ i18n}
+									</span>
+								</div>
 							</div>
-							<div class="card-content">
-								<hr/>
-								<h4>${card.title  @ context='html'}</h4>
-								<p>${card.description  @ context='html'}</p>
-							</div>
-							<div class="card-footer">
-								<span class="card-footer-action">
-									<svg class="align-middle s-${cardIcon}">
-										<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${cardIcon}"></use>
-									</svg>
-									${cardCTA @ i18n}
-								</span>
-							</div>
-						</div>
-					</a>
-				</div>
-			</sly>
+						</a>
+					</div>
+				</sly>
+			</div>
 		</div>
 	</div>
-     <p data-sly-test="${properties.ctaText && properties.ctaPath}" class="text-center">
-        <a class="btn ${properties.cssClass}" href="${properties.ctaPath}">${properties.ctaText @ context='unsafe'}</a>
-     </p>
+	<p data-sly-test="${properties.ctaText && properties.ctaPath}" class="text-center">
+		<a class="btn ${properties.cssClass}" href="${properties.ctaPath}">${properties.ctaText @ context='unsafe'}</a>
+	</p>
 </section>
