--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-filters/resource-center-filters.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-filters/resource-center-filters.html
@@ -86,7 +86,7 @@
                 <div class="aem-GridColumn--phone--12 ${aemGridColumn} aem-GridColumn layout-secondary py2">
                     <div class="aem-Grid aem-Grid--12 aem-Grid--default--12 panel-group">
                         <div data-sly-test="${!wcmmode.edit}">
-                            <div class="rc-filter-header filter-menu">
+                            <div data-sly-test="${helper.filters} class="rc-filter-header filter-menu">
                                 <div class="inline-block" style="vertical-align: top;">
                                     <span class="header-label">${'Filters' @ i18n}</span>
                                     <span class="verticalBar">|</span>
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <!-- mobile menu header -->
-                            <div class="rc-filter-header filter-menu-mobile">
+                            <div data-sly-test="${helper.filters} class="rc-filter-header filter-menu-mobile">
                                 <span id="filter-count" class="filter-menu-btn header-label" data-template="${'Filters {1}' @ i18n}"></span>
                                 <span class="results-info" data-template="${'Showing {1} - {2} of {3}' @ i18n}"></span>
                             </div>
