--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-filters/resource-center-filters.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-filters/resource-center-filters.html
@@ -1,92 +1,94 @@
 <div data-sly-test="${wcmmode.edit}">[ Edit ${component.title} Component ]</div>
 <sly data-sly-use.helper="${'com.bmc.models.components.resourcecenter.ResourceCenterFiltersModel'}"></sly>
+ <!--/* WEB-9669 Hide the filter section if no filter display  */-->
+    <sly data-sly-test="${!helper.filter}">
+        <sly data-sly-test.aemGridColumn="aem-GridColumn--default--12"></sly>
+        <sly data-sly-test.cssClass="col-4-layout"></sly>
+    </sly>
+    <sly data-sly-test="${helper.filters}">
+        <sly data-sly-test.aemGridColumn="aem-GridColumn--default--9"></sly>
+    </sly>
+
 
 <div class="rc-filter-component">
     <sly data-sly-list.item="${helper.preFilters}">
         <data class="pre-filter-option" data-name="${item.filterName}" data-value="${item.name}" hidden></data>
     </sly>
-    <!--/* WEB-9669 Hide the filter section if no filter display  */-->
-    <sly data-sly-test="${!helper.filter}">
-    	<sly data-sly-test.aemGridColumn="aem-GridColumn--default--12"></sly>
-    </sly>
-    <sly data-sly-test="${helper.filters}">
-        <sly data-sly-test.aemGridColumn="aem-GridColumn--default--9"></sly>
-    </sly>
     <form>
-        <section class="bg-seashell">
+        <section class="bg-seashell ${cssClass}">
             <div class="aem-Grid aem-Grid--12 aem-Grid--default--12 layout-inner-wrap">
-               <sly data-sly-test="${helper.filters}">
+                <sly data-sly-test="${helper.filters}">
                     <div class="aem-GridColumn--phone--12 aem-GridColumn aem-GridColumn--default--3 layout-secondary p1 py2">
                         <div data-sly-test="${wcmmode.edit}">[ Edit Filters to Display ]</div>
                         <div data-sly-test="${!wcmmode.edit}" class="aem-Grid aem-Grid--12 aem-Grid--default--12">
                             <!-- filter-search-overlay classes for mobile menu -->
                             <div id="filterBodyOverlay" title="Click anywhere to close overlay."></div>
                             <div id="filter-menu" class="filter-menu">
-                               <div class="rows_flex"><div id="search_header" class="columns"><div class="component_search">
-                               <div class="search-panel">
-                                    <!-- mobile menu header -->
-                                    <div class="rc-filter-header filter-menu-mobile">
-                                        <span class="filter_component_search_close" id="filter_component_search_close"></span>
-                                        <span class="header-label" style="padding-left: 50px;">${'Filters' @ i18n}</span>
-                                        <div class="inline-block" style="float: right;">
-                                            <a class="reset-btn" style="border-style: none;font-weight: 100;"
-                                                href="#">${'Clear All' @ i18n}</a>
+                                <div class="rows_flex"><div id="search_header" class="columns"><div class="component_search">
+                                    <div class="search-panel">
+                                        <!-- mobile menu header -->
+                                        <div class="rc-filter-header filter-menu-mobile">
+                                            <span class="filter_component_search_close" id="filter_component_search_close"></span>
+                                            <span class="header-label" style="padding-left: 50px;">${'Filters' @ i18n}</span>
+                                            <div class="inline-block" style="float: right;">
+                                                <a class="reset-btn" style="border-style: none;font-weight: 100;"
+                                                   href="#">${'Clear All' @ i18n}</a>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <!-- keyword search -->
-                                <div data-sly-test="${properties.keywordSearch}" class="rc-filter-panel-group mb2">
-                                    <div class="heading-group bg-white">
-                                        <ul class="list-group-item list-group-item-action">
-                                            <li class="list-group-item list-group-item-action">${'Search' @ i18n}</li>
-                                        </ul>
-                                    </div>
-                                    <div class="list-group">
-                                        <ul>
-                                            <li class="keyword-search">
-                                                <input id="input-${option.name}" type="text" placeholder="${'Keyword Search' @ i18n}"/>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <!-- filters -->
-                                <sly data-sly-list.item="${helper.filters}">
-                                    <div data-sly-test="${item.display}" class="rc-filter-panel-group mb2">
-                                        <div class="heading-group">
-                                            <ul class="list-group-item list-group-item-action parent-filter rc-arrow-up" data-name="${item.name}">
-                                                <li class="list-group-item list-group-item-action">${item.label}</li>
+                                    <!-- keyword search -->
+                                    <div data-sly-test="${properties.keywordSearch}" class="rc-filter-panel-group mb2">
+                                        <div class="heading-group bg-white">
+                                            <ul class="list-group-item list-group-item-action">
+                                                <li class="list-group-item list-group-item-action">${'Search' @ i18n}</li>
                                             </ul>
                                         </div>
                                         <div class="list-group">
-                                            <ul class="child-filter">
-                                                <sly data-sly-list.option="${item.options}">
-                                                    <div class="filter-checkbox-item" data-name="${item.name}">
-                                                        <li id="${option.name}">${option.title}</li>
-                                                        <input id="checkbox-${option.name}" type="checkbox" hidden data-name="${option.name}"/>
-                                                    </div>
-                                                </sly>
+                                            <ul>
+                                                <li class="keyword-search">
+                                                    <input id="input-${option.name}" type="text" placeholder="${'Keyword Search' @ i18n}"/>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
-                                </sly>
-                                <!-- mobile menu header -->
-                                <div class="rc-filter-header filter-menu-mobile" style="margin-bottom: 20%;">
-                                    <div>
-                                        <button class="submit-btn" href="#">${'Submit' @ i18n}</button>
+                                    <!-- filters -->
+                                    <sly data-sly-list.item="${helper.filters}">
+                                        <div data-sly-test="${item.display}" class="rc-filter-panel-group mb2">
+                                            <div class="heading-group">
+                                                <ul class="list-group-item list-group-item-action parent-filter rc-arrow-up" data-name="${item.name}">
+                                                    <li class="list-group-item list-group-item-action">${item.label}</li>
+                                                </ul>
+                                            </div>
+                                            <div class="list-group">
+                                                <ul class="child-filter">
+                                                    <sly data-sly-list.option="${item.options}">
+                                                        <div class="filter-checkbox-item" data-name="${item.name}">
+                                                            <li id="${option.name}">${option.title}</li>
+                                                            <input id="checkbox-${option.name}" type="checkbox" hidden data-name="${option.name}"/>
+                                                        </div>
+                                                    </sly>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </sly>
+                                    <!-- mobile menu header -->
+                                    <div class="rc-filter-header filter-menu-mobile" style="margin-bottom: 20%;">
+                                        <div>
+                                            <button class="submit-btn" href="#">${'Submit' @ i18n}</button>
+                                        </div>
                                     </div>
                                 </div>
                                 </div>
-                               </div>
-                               </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-              </sly>
+                </sly>
                 <div class="aem-GridColumn--phone--12 ${aemGridColumn} aem-GridColumn layout-secondary py2">
                     <div class="aem-Grid aem-Grid--12 aem-Grid--default--12 panel-group">
                         <div data-sly-test="${!wcmmode.edit}">
-                            <div data-sly-test="${helper.filters} class="rc-filter-header filter-menu">
+                            <div class="rc-filter-header filter-menu" data-sly-test="${helper.filters}">
                                 <div class="inline-block" style="vertical-align: top;">
                                     <span class="header-label">${'Filters' @ i18n}</span>
                                     <span class="verticalBar">|</span>
@@ -96,17 +98,17 @@
                                 <div class="inline-block" style="float: right;">
                                     <a class="reset-btn" href="#">${'Reset Filters' @ i18n}</a>
                                 </div>
-                            </div>
-                            <!-- mobile menu header -->
-                            <div data-sly-test="${helper.filters} class="rc-filter-header filter-menu-mobile">
-                                <span id="filter-count" class="filter-menu-btn header-label" data-template="${'Filters {1}' @ i18n}"></span>
+                        	</div>
+                        <!-- mobile menu header -->
+                        <div class="rc-filter-header filter-menu-mobile">
+                                <span id="filter-count" class="filter-menu-btn header-label" data-template="${'Filters {1}' @ i18n}"></span></sly>
                                 <span class="results-info" data-template="${'Showing {1} - {2} of {3}' @ i18n}"></span>
-                            </div>
                         </div>
-                        <sly data-sly-resource="${'results' @ resourceType='wcm/foundation/components/responsivegrid'}" />
-                    </div>
-                </div>
+                	</div>
+                <sly data-sly-resource="${'results' @ resourceType='wcm/foundation/components/responsivegrid'}" />
             </div>
-        </section>
-    </form>
+		</div>
+		</div>
+	</section>
+</form>
 </div>
