--- a/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
@@ -3,7 +3,7 @@
         <div class="top-section">
             <h2>Case Management</h2><a class="external-app-link btn btn-primary" 
             [href]="state.widgets.manageCase"
-            target="_blank" (click)="sendCaseManagment('Case Managment')">Go to Case Management</a>
+            target="_blank" (click)="sendCaseManagment('Case Managment')">Case and Defect Management</a>
         </div>
         <div class="description">Your most recent support cases</div>
     </div>
