WEB-9895 Added conditions to accept other URLs

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/key-features/key-features.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/key-features/key-features.html
@@ -29,8 +29,11 @@
 <sly data-sly-test="${properties.resourceCtaPath}">
 	<sly data-sly-use.resourceCTA="${'com.bmc.components.utils.LinkGenerator' @ urlPath=properties.resourceCtaPath}"></sly>
 	  <sly data-sly-test="${resourceCTA.href}">
-			   <sly data-sly-test.resourceCTAPath="${resourceCTA.href}"></sly>
-			 </sly> 
+          <sly data-sly-test.resourceCTAPath="${resourceCTA.href}"></sly>
+      </sly>
+        <sly data-sly-test="${!resourceCTA.href}">
+            <sly data-sly-test.resourceCTAPath="${properties.resourceCtaPath}"></sly>
+        </sly>
 </sly>
 <sly data-sly-test="${!properties.resourceCtaPath}">
 	  <sly data-sly-test.resourceCtaPath="#resources"></sly>
