WEB-10043 Quick fix to comment CoveoQuickView from COnfluence

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcoveosearch/supportcoveosearch.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcoveosearch/supportcoveosearch.html
@@ -187,7 +187,8 @@
         </div>
         <div class="coveo-result-cell">
             <a class="CoveoResultLink"></a>
-            <span class="CoveoQuickview"></span>
+            <!--/* WEB-10043 Removing the CoveoQuickView */-->
+            <!--<span class="CoveoQuickview"></span>-->
         </div>
         <div class="coveo-result-cell" style="width:120px; text-align:right;">
             <span class="CoveoFieldValue" data-field="@sysdate" data-helper="date"></span>
