--- a/front-end/Assets/src/support-central-angular/src/styles.scss
+++ b/front-end/Assets/src/support-central-angular/src/styles.scss
@@ -210,3 +210,10 @@ body a:hover {
   color: #046eb1;
   text-decoration: none;
 }
+
+//introJS guided tours
+
+div.introjs-tooltip {
+  width: 400px;
+  max-width: 400px;
+}
