--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -19,7 +19,7 @@
 				<sly data-sly-list.card="${productSet.resourceSectionCards}">
 					<div class="rc-card-col" style="padding-bottom:20px">
 
-						<sly data-sly-test="${card.contentText == 'play'}">
+						<sly data-sly-test="${card.contentType == 'Videos'}">
 							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 							<sly data-sly-test.anchorCSS="modal-video-player"/>
 							<sly data-sly-test.cardIcon="play"/>
@@ -43,7 +43,10 @@
 							<div class="simple-card bg-white">
 								<div class="card-header">
 									<h4>${card.contentType}</h4>
-									<div class="card-icon ic_${cardIcon}" alt="" border="0"></div>
+
+									<div data-sly-test="${card.headerImage}" class="card-thumbnail" style="background: url('${card.headerImage}') no-repeat center center / cover;">
+									</div>
+									<div data-sly-test="${!card.headerImage}" class="card-icon ic_${cardIcon}" alt="" border="0"></div>
 								</div>
 								<div class="card-content">
 									<hr/>
@@ -51,6 +54,16 @@
 									<p>${card.description  @ context='html'}</p>
 								</div>
 								<div class="card-footer">
+									<div class="card-footer-logo">
+										<span data-sly-test="${card.videoLength && card.contentText == 'play'}" class="video-length">
+											<svg class="align-middle s-clock">
+												<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-clock"></use>
+											</svg>${card.videoLength}
+                                    	</span>
+										<span>
+                                        	<img  data-sly-test="${card.footerLogo && card.contentText != 'play'}" src="${card.footerLogo}" style="max-height:30px;">
+                                    	</span>
+									</div>
 									<span class="card-footer-action">
 										<svg class="align-middle s-${cardIcon}">
 											<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${cardIcon}"></use>
