created ic_trial class

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -674,6 +674,9 @@ body.no-scroll{
   .ic_view {
     background-image: url("#{$imagesFolder}ic_view.png");
   }
+  .ic_trial {
+    background-image: url("#{$imagesFolder}icon-interactive.png");
+  }
   
 }
 
