White icon added

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -677,6 +677,9 @@ body.no-scroll{
   .ic_trial {
     background-image: url("#{$imagesFolder}icon-interactive.png");
   }
+  .ic_trial-white {
+    background-image: url("#{$imagesFolder}icon-interactive-white.png");
+  }
   
 }
 
