DSCE-8165 Guided tour for guest users

--- a/front-end/Assets/src/support-central-angular/src/app/guided-tour/guided-tour.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/guided-tour/guided-tour.component.html
@@ -1,1 +1,1 @@
-<div *ngIf="state.user.loggedIn === 'true'" tabindex="0" (keyup.enter)="loggedInUserTour()" (click)="loggedInUserTour()" class="psc-guided-tour">Guided tour</div>
+<div tabindex="0" (keyup.enter)="startTour()" (click)="startTour()" class="psc-guided-tour">Guided tour</div>
